--- a/composer.json
+++ b/composer.json
@@ -9,5 +9,10 @@
         }
     ],
     "require": {
+    },
+    "autoload": {
+        "psr-4": {
+            "Chougron\\AliexpressCrawler\\": "src/"
+        }
     }
 }
