--- a/composer.json
+++ b/composer.json
@@ -16,5 +16,8 @@
         "psr-4": {
             "Chougron\\AliexpressCrawler\\": "src/"
         }
+    },
+    "require-dev": {
+        "squizlabs/php_codesniffer": "3.*"
     }
 }
