--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         }
     },
     "require-dev": {
-        "squizlabs/php_codesniffer": "3.*"
+        "squizlabs/php_codesniffer": "3.*",
+        "phpunit/phpunit": "^4"
     }
 }
